styles/main.css
*{
	margin:0;
	padding:0;
}

header{
	width:100%;
	height:80px;
	position:fixed;
	background-color:white;
	z-index:999;
}

header img{
	padding:10px 20px;
}

header ul{
	display:flex;
	justify-content:flex-end;
	list-style:none;
	margin-right:125px;
}

header ul li{
	display:flex;
	margin-left:40px;
	font-size:18px;
	color:black;

	
}

header ul li a{
	text-decoration:none;
	color:black;
	font-weight:bold;
	position:relative;
	top:-40px;
}

header ul li a:hover{
	color:pink;
}

header ul li a:active{
	color:pink;
}




body, #slider, .wrap, .slide-content{
	margin:0;
	padding:0;
	font-family:Arial, Helvetica, sans-serif;
	width:100%;
	height:100%;
	overflow-x:hidden;
}

.wrap{position:relative}

.slide{
	background-size:cover;
	background-position:center;
	background-repeat:no-repeat;
	background-attachment: fixed;
}

.slide1{background-image: url('../img/nails17.jpg')}
.slide2{background-image: url('../img/nails31.jpg')}
.slide3{background-image: url('../img/nails12.jpg')}

.slide-content{
	display:flex;
	flex-direction:column;
	justify-content:center;
	align-items:center;
	text-align:center;
}

.slide-content span{
	font-size:5rem;
	color:#fff;
}

.arrow{
	cursor:pointer;
	position:absolute;
	top:50%;
	margin-top: -35px;
	width:0;
	height:0;
	border-style:solid;
}

#arrow-left{
	border-width:30px 40px 30px 0;
	border-color: transparent #fff transparent transparent;
	left:0;
	margin-left:30px;
	opacity:0;
	transform:translateX(20px);
	transition:all 0.7s ease-in-out;
}

#arrow-right{
	border-width:30px 0 30px 40px;
	border-color: transparent transparent transparent #fff;
	right:0;
	margin-right:30px;
	opacity:0;
	transform:translateX(-20px);
	transition:all 0.3s ease-in-out;
}



.section{
	text-align:center;
	padding:50px 80px;
	color:black;
}

.section h1{
	font-size:32px;
}


.section1{
	height:400px;
	background-color:white;
}

.s1wrapper{
	display:flex;
	flex-wrap:wrap;
}

.section1 .s1d1{
	width:500px;
	margin-right:20px;
	padding:20px;
	line-height:1.5em;
}

.section1 .s1d2{
	flex:1;
	height:300px;
	width:300px;
	margin:20px;
	
	background-image:url("../img/nails10.jpg");
	background-size:cover;
	background-repeat:no-repeat;
}



.section2{
	display:flex;
	flex-direction:column;
	height:100%;
	background-color:seashell;
	opacity:0.8;
}

.s2header{
	position:relative;
	top:100px;
}

.s2header h1{
	font-weight:bold;
	font-size:56px;
}

.section2 .s2wrapper{
	display:flex;
	flex-wrap:wrap;
	justify-content:center;
	padding:20px;
	margin-top:60px;
	
}

.section2 .s2wrapper p{
	position:absolute;
	bottom:-75;
	left:25%;
	font-size:42px;
	font-weight:bold;
	
}

.section2 .s2wrapper .s2d1{
	flex:1;
	height:400px;
	background-image:url('../img/nails18.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	margin:10px;
	border-radius:50%;
	position:relative;
	top:100px;
	opacity:0;
	transform:translateX(20px);
	transition:all 0.7s ease-in-out;
}

.section2 .s2wrapper .s2d2{
	flex:1;
	max-height:400px;
	background-image:url('../img/nails24.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	margin:10px;
	border-radius:50%;
	position:relative;
	top:100px;
	opacity:0;
	transform:translateX(20px);
	transition:all 0.7s ease-in-out;
}

.section2 .s2wrapper .s2d3{
	flex:1;
	max-height:400px;
	background-image:url('../img/nails31.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	margin:10px;
	border-radius:50%;
	position:relative;
	top:100px;
	opacity:0;
	transform:translateX(20px);
	transition:all 0.7s ease-in-out;
}

.section2 .s2wrapper .s2d3 p{
	left:100px;
}

.section3{
	display:flex;
	flex-direction:column;
	height:130%;
	background-color:white;
	opacity:0.8;
}

.s3header{
	position:relative;
	top:100px;
}

.s3header h1{
	font-weight:bold;
	font-size:56px;
}

.s3wrapper{
	display:grid;
	grid-template-columns:auto auto;
	grid-template-rows:auto auto auto;
	grid-gap:3px;
	justify-content:center;
	position:relative;
	top:200px;
	font-size:32px;
	font-style:italic;
	
}

.s3wrapper div{
	padding:40px 20px;
}

.s3d1{
	font-size:125px;
	color:pink;
}

.s3d4{
	font-size:125px;
	color:pink;
}

.s3d5{
	font-size:125px;
	color:pink;
}



.s4wrapper{
	position:relative;
	min-height:100%;
	width:100%;
	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("../img/nails10.jpg");
	background-size:cover;
	background-position:center;
	background-repeat:no-repeat;
	background-attachment:fixed;
}

.s4d1 p{
	color:white;
	font-size:36px;
	font-style:italic;
	position:relative;
	top:200px;
	left:100px;
}

.s4d2 p{
	color:white;
	font-size:36px;
	font-style:italic;
	position:relative;
	top:300px;
	left:175px;
}

.s4d3 p{
	color:white;
	font-size:36px;
	font-style:italic;
	position:relative;
	top:400px;
	left:250px;
}
.s5header{
	position:relative;
	top:100px;
}

.s5header h1{
	font-weight:bold;
	font-size:56px;
	margin-bottom:50px;
}
.gallery{
	display:grid;
	grid-template-columns:auto auto auto;
	grid-template-rows:auto auto auto;
	grid-gap:3px;
	justify-content:center;
	position:relative;
	top:200px;

}

.gallery div{
	overflow:hidden;
}
.gallery div img{
	max-width:100%;
}

.gallery div img:hover{
	transform:scale(1.2, 1.2);
}

footer{
	position:relative;
	top:200px;
	height:300px;
	background-color:seashell;
	
}

